04-v2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-goserver
spec:
  selector:
    app: goserver
  type: ClusterIP
  ports:
  - name: goserver-service
    port: 9000
    protocol: TCP
